Fix bottm white spacing for contact us form

--- a/css/contact.css
+++ b/css/contact.css
@@ -66,6 +66,10 @@
     height: 500px;
 }
 
-#btnSpinner{
+
+#contactAlert{
     display: none;
+}
+#contactAlert.show{
+    display: block;
 }
